review date is added

--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -4,7 +4,16 @@ layout: default
 
 <div class="post">
   <h1 class="post-title">{{ page.title }}</h1>
-  <span class="post-date">{{ page.date | date_to_string }}</span>
+  <span class="post-date">
+    {{ page.date | date_to_string }}
+    <br>
+    ( review : 
+    {% assign reviewArray = page.review | split: " " %}
+      {% for review in reviewArray %}
+        {{ review | date_to_string }}
+      {% endfor %}
+    )
+  </span>
   {{ content }}
 </div>
 
